# chiplay

./: Cargo.toml  LICENSE  README.md
src/: app.rs  events.rs  main.rs  mpris.rs  player.rs  playlist.rs  radio.rs  spectrum.rs  stations.rs  track.rs  ui.rs
