[package]
name = "chiplay"
version = "0.1.0"
edition = "2021"
description = "A fast CLI music player with a TUI and internet radio"
license = "MIT"
repository = "https://codeberg.org/moyunni/chiplay"
readme = "README.md"
keywords = ["music", "player", "tui", "radio", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rodio = { version = "0.20", features = ["symphonia-all"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "stream"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
